examples/syntaxErrors/nonLinealCopatternError.lcp
A = ()

main : A -> A -> A
main x x = ()
